@@ -1,5 +1,6 @@
 2005-01-13  Michael Snyder  <msnyder@redhat.com>
 
+	* pa64solib.[ch]: Whitespace tweaks.
 	* mdebugread.c: Whitespace tweaks.
 	* main.c: Whitespace tweaks.
 	* interps.c: Whitespace tweaks.
